cmake_minimum_required (VERSION 3.6)
project (Shmup)
#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/.)
#message(${CMAKE_MODULE_PATH})
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON) 

set(CMAKE_CONFIGURATION_TYPES "Debug;Release;RelWithDebInfo" CACHE STRING "Configuration types" FORCE)

file(GLOB SRC_FILES
    ${CMAKE_SOURCE_DIR}/src/*.h
    ${CMAKE_SOURCE_DIR}/src/*.c
)

set(SDL2_LIBRARIES "SDL2" "SDL2main")
#find_package(SDL2 REQUIRED)
set(SDL2_INCLUDE_DIRS  ${CMAKE_CURRENT_SOURCE_DIR}/dep/SDL2-2.0.12/include)
set(SDL2_LIBDIR ${CMAKE_CURRENT_SOURCE_DIR}/dep/SDL2-2.0.12/lib/x86)

include_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${SDL2_INCLUDE_DIRS})
  
link_directories(
  ${SDL2_LIBDIR})
  
SET(EXE_NAME "Shmup")

ADD_EXECUTABLE(${EXE_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${SDL2_LIBRARIES})

add_definitions(-DWIN32)

set_target_properties(${EXE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin )
set_target_properties(${EXE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin )
set_target_properties(${EXE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin )
set_target_properties(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "_d")
set_target_properties(${EXE_NAME} PROPERTIES RELWITHDEBINFO_POSTFIX "RelWithDebInfo")