cmake_minimum_required (VERSION 3.6)
project (Shmup)
SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON) 

set(CMAKE_CONFIGURATION_TYPES "Debug;Release;RelWithDebInfo" CACHE STRING "Configuration types" FORCE)

file(GLOB SRC_FILES
    ${CMAKE_SOURCE_DIR}/src/*.h
    ${CMAKE_SOURCE_DIR}/src/*.c
)

file(GLOB TOOL_FILES
    ${CMAKE_SOURCE_DIR}/tool/*.h
    ${CMAKE_SOURCE_DIR}/tool/*.cpp
)

set(SDL2_LIBRARIES "SDL2" "SDL2main")
set(SDL2_INCLUDE_DIRS  ${CMAKE_CURRENT_SOURCE_DIR}/dep/SDL2-2.0.12/include)
set(SDL2_LIBDIR ${CMAKE_CURRENT_SOURCE_DIR}/dep/SDL2-2.0.12/lib/x86)

include_directories(
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${CMAKE_CURRENT_SOURCE_DIR}/tool
  ${SDL2_INCLUDE_DIRS})
  
link_directories(
  ${SDL2_LIBDIR}
)
  
SET(EXE_NAME "Shmup")
SET(TOOL_NAME "Tool")

ADD_EXECUTABLE(${EXE_NAME} ${SRC_FILES})
ADD_EXECUTABLE(${TOOL_NAME} ${TOOL_FILES})
TARGET_LINK_LIBRARIES(${EXE_NAME} ${SDL2_LIBRARIES})
TARGET_LINK_LIBRARIES(${TOOL_NAME})

add_definitions(-DWIN32)

set_target_properties(${EXE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin )
set_target_properties(${EXE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin )
set_target_properties(${EXE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin )
set_target_properties(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "_d")
set_target_properties(${EXE_NAME} PROPERTIES RELWITHDEBINFO_POSTFIX "RelWithDebInfo")

set_target_properties(${TOOL_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/bin )
set_target_properties(${TOOL_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/bin )
set_target_properties(${TOOL_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_SOURCE_DIR}/bin )
set_target_properties(${TOOL_NAME} PROPERTIES DEBUG_POSTFIX "_d")
set_target_properties(${TOOL_NAME} PROPERTIES RELWITHDEBINFO_POSTFIX "RelWithDebInfo")

